--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/business"
+    android:visibility="visible"
     tools:context=".MainActivity">
 
     <EditText
@@ -43,8 +44,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="72dp"
         android:layout_marginBottom="132dp"
-        android:textColor="@color/primary_light"
-        android:text="Already have an account? Sign in here" />
+        android:text="Already have an account? Sign in here"
+        android:textColor="@color/primary_light" />
 
     <Button
         android:id="@+id/button"
@@ -71,5 +72,15 @@
         android:text="Business Management"
         android:textColor="@color/primary_dark"
         android:textSize="35sp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="36dp"
+        tools:visibility="invisible" />
 
 </RelativeLayout>
